Add the favicon branding, P as in pjodd

--- a/nodes.html
+++ b/nodes.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pjodd : table of nodes</title>
+    <link rel="icon" type="image/png" href="p.png">
     <!-- <link type="text/css" rel="stylesheet" href="graph.css"/> -->
     <style>
       table {
