graph: hide stripped prefixes for now

--- a/graph.html
+++ b/graph.html
@@ -27,8 +27,10 @@
         <span class="clients">clients>0</span>
         <span class="offline">!flags.online</span>
         <br />models: <span id="models">loading</span>
+        <!-- Not for now
         <br />stripped node_id prefixes:
         <br /><span id="prefixes"></span>
+        -->
         <br /><em>hover node for more info</em>
         <br /><a class="ontop" href="nodes.html">all nodes</a>
       </div>
