graph: remove some mostly unnecessary info

--- a/graph.html
+++ b/graph.html
@@ -13,26 +13,12 @@
       <div>
         <span id="timestamp"></span>
         — <span id="sumnodes">loading</span> nodes,
-        <span id="sumclients">loading</span> clients
+        <span id="sumclients" class="clients">loading</span> clients
       </div>
       <div>
-        <strong>link:</strong>
-        <span class="fastd">fastd</span>
-        <span class="wireless">wireless</span>
-        <span>width: sqrt(link tq)</span>
-      </div>
-      <div>
-        <strong>node:</strong>
-        <span class="desc">desc</span>|node_id
-        <span class="clients">clients>0</span>
-        <span class="offline">!flags.online</span>
-        <br />models: <span id="models">loading</span>
-        <!-- Not for now
-        <br />stripped node_id prefixes:
-        <br /><span id="prefixes"></span>
-        -->
-        <br /><em>hover node for more info</em>
-        <br /><a class="ontop" href="nodes.html">all nodes</a>
+        models: <span id="models">loading</span>
+        <br /><em>hover node/link for more info</em>
+        <br /><a class="ontop" href="nodes.html">nodes list</a>
       </div>
     </header>
     <div id="chart"></div>
