--- a/graph.html
+++ b/graph.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pjodd : graph of nodes</title>
     <script type="text/javascript" src="d3.min.js"></script>
+    <script type="text/javascript" src="d3-queue.min.js"></script>
     <link rel="icon" type="image/png" href="p.png">
     <link type="text/css" rel="stylesheet" href="graph.css"/>
   </head>
