--- a/nodes.html
+++ b/nodes.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pjodd : table of nodes</title>
+    <script type="text/javascript" src="d3.min.js"></script>
+    <script type="text/javascript" src="d3-queue.min.js"></script>
     <link rel="icon" type="image/png" href="p.png">
     <!-- <link type="text/css" rel="stylesheet" href="graph.css"/> -->
     <style>
