Add link to clients histogram

--- a/graph.html
+++ b/graph.html
@@ -20,6 +20,7 @@
         models: <span id="models">loading</span>
         <br /><em>hover node/link for more info</em>
         <br /><a class="ontop" href="nodes.html">nodes list</a>
+        <a class="ontop" href="clients.html">clients</a>
       </div>
     </header>
     <div id="chart"></div>
